--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ a {
 }
 
 .button-section-one:hover, .button-section-one:focus {
-        background-color:  #404BBF;
+    background-color:  #404BBF;
 }
 
 /*TWO*/
@@ -176,20 +176,20 @@ a {
 }
 .visually-hidden {
     position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        border: 0;
-        padding: 0;
-        white-space: nowrap;
-        clip-path: inset(100%);
-        clip: rect(0 0 0 0);
-        overflow: hidden;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .section-icon-cont {
     border-radius: 4px;
-    border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-    background: var(--CLOUD, #f4f4fd);
+    border: 1px solid #8e8f99;
+    background: #f4f4fd;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -202,13 +202,12 @@ a {
 
 }
 .section-two-name {
-    color: var(--NAVY-BLUE, #2E2F42);
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 24px;
-        /* 120% */
-        letter-spacing: 0.4px;
-        margin-bottom: 8px;
+    color: #2E2F42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.025em;
+    margin-bottom: 8px;
 }
 .section-two-dis {
     display: flex;
@@ -218,14 +217,11 @@ a {
     width: calc((100% - 72px) /4);
 }
 .section-two-text {
-    color: var(--SLATE, #434455);
-        font-family: Roboto;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 24px;
-        /* 150% */
-        letter-spacing: 0.32px;
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 /*THREE*/
 .section-three {
@@ -425,6 +421,7 @@ a {
     display: block;
     justify-content: center;
     align-items: center;
+   
 }
 .icon-footer-p {
     font-family: Roboto;
@@ -461,4 +458,84 @@ a {
 .footer-link:hover,
 .footer-link:focus {
     background-color: #31d0aa;
+}
+.footer-botom {
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 80px;
+}
+.footer-form {
+    display: flex;
+    margin-top: 16px;
+}
+.footer-label {
+
+}
+    
+.footer-botom-p {
+    color:#FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    
+}
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #ffffff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    padding-left: 16px;
+    padding-right: 16px;
+    background-color: transparent;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    margin-right: 24px;
+}
+.footer-input:focus,
+.footer-input:hover {
+    border-color: #4D5AE5;
+}
+.footer-input::placeholder {
+    color: #FFFfff;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.03em;
+    padding: 8px 16px;
+}
+.footer-btn {
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    min-width: 165px;
+    height: 40px;
+    display: inline-flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border-radius: 4px;
+    background-color: #4D5AE5;
+    border: none;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-btn:focus, 
+.footer-btn:hover {
+    background-color: #404BBF;
+}
+.icon-sub {
+   fill: #ffffff; 
+
 }
